@@ -3,8 +3,10 @@
 ========================
 
 - added `U.reader().list()` method
+- added `Array.findValue()`
 - threads supports views
 - improved `Database.scalar()` by adding new argument
+- improved `QueryBuilder.in()` and `QueryBuilder.notin()`
 - fixed UTF8 chars in multi-part parser
 - fixed `NOSQL().autofill()`
 - fixed converting date via `Date.setTimeZone()`
